Fix filter covering dropdown in header

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -155,9 +155,6 @@ body > footer {
   .message-container {
     z-index: 4;
 }
-.zindex {
-    z-index: 5;
-}
 
 .custom-toast {
     overflow: visible;
